--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png" />
 
     <!--=============== REMIXICONS ===============-->
     <link
@@ -59,7 +59,7 @@
     <main class="main">
       <!--==================== HOME ====================-->
       <section class="home" id="home">
-        <img src="assets/img/home1.jpg" alt="" class="home__img" />
+        <img src="assets/home1.jpg" alt="" class="home__img" />
 
         <div class="home__container container grid">
           <div class="home__data">
@@ -111,7 +111,7 @@
             </div>
 
             <div class="home__info-overlay">
-              <img src="assets/img/home2.jpg" alt="" class="home__info-img" />
+              <img src="assets/home2.jpg" alt="" class="home__info-img" />
             </div>
           </div>
         </div>
@@ -135,11 +135,11 @@
 
           <div class="about__img">
             <div class="about__img-overlay">
-              <img src="assets/img/about1.jpg" alt="" class="about__img-one" />
+              <img src="assets/about1.jpg" alt="" class="about__img-one" />
             </div>
 
             <div class="about__img-overlay">
-              <img src="assets/img/about2.jpg" alt="" class="about__img-two" />
+              <img src="assets/about2.jpg" alt="" class="about__img-two" />
             </div>
           </div>
         </div>
@@ -157,7 +157,7 @@
             <!--==================== DISCOVER 1 ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/discover1.jpg"
+                src="assets/discover1.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -170,7 +170,7 @@
             <!--==================== DISCOVER 2 ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/discover2.jpg"
+                src="assets/discover2.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -183,7 +183,7 @@
             <!--==================== DISCOVER 3 ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/discover3.jpg"
+                src="assets/discover3.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -196,7 +196,7 @@
             <!--==================== DISCOVER 4 ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/discover4.jpg"
+                src="assets/discover4.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -246,7 +246,7 @@
           <div class="experience__img grid">
             <div class="experience__overlay">
               <img
-                src="assets/img/experience1.jpg"
+                src="assets/experience1.jpg"
                 alt=""
                 class="experience__img-one"
               />
@@ -254,7 +254,7 @@
 
             <div class="experience__overlay">
               <img
-                src="assets/img/experience2.jpg"
+                src="assets/experience2.jpg"
                 alt=""
                 class="experience__img-two"
               />
@@ -275,7 +275,7 @@
 
           <div class="video__content">
             <video id="video-file">
-              <source src="assets/video/video.mp4" type="video/mp4" />
+              <source src="assets/video.mp4" type="video/mp4" />
             </video>
 
             <button class="button button--flex video__button" id="video-button">
@@ -292,7 +292,7 @@
         <div class="place__container container grid">
           <!--==================== PLACES CARD 1 ====================-->
           <div class="place__card">
-            <img src="assets/img/place1.jpg" alt="" class="place__img" />
+            <img src="assets/place1.jpg" alt="" class="place__img" />
 
             <div class="place__content">
               <span class="place__rating">
@@ -314,7 +314,7 @@
 
           <!--==================== PLACES CARD 2 ====================-->
           <div class="place__card">
-            <img src="assets/img/place2.jpg" alt="" class="place__img" />
+            <img src="assets/place2.jpg" alt="" class="place__img" />
 
             <div class="place__content">
               <span class="place__rating">
@@ -336,7 +336,7 @@
 
           <!--==================== PLACES CARD 3 ====================-->
           <div class="place__card">
-            <img src="assets/img/place3.jpg" alt="" class="place__img" />
+            <img src="assets/place3.jpg" alt="" class="place__img" />
 
             <div class="place__content">
               <span class="place__rating">
@@ -358,7 +358,7 @@
 
           <!--==================== PLACES CARD 4 ====================-->
           <div class="place__card">
-            <img src="assets/img/place4.jpg" alt="" class="place__img" />
+            <img src="assets/place4.jpg" alt="" class="place__img" />
 
             <div class="place__content">
               <span class="place__rating">
@@ -380,7 +380,7 @@
 
           <!--==================== PLACES CARD 5 ====================-->
           <div class="place__card">
-            <img src="assets/img/place5.jpg" alt="" class="place__img" />
+            <img src="assets/place5.jpg" alt="" class="place__img" />
 
             <div class="place__content">
               <span class="place__rating">
@@ -431,19 +431,19 @@
       <section class="sponsor section">
         <div class="sponsor__container container grid">
           <div class="sponsor__content">
-            <img src="assets/img/sponsors1.png" alt="" class="sponsor__img" />
+            <img src="assets/sponsors1.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/sponsors2.png" alt="" class="sponsor__img" />
+            <img src="assets/sponsors2.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/sponsors3.png" alt="" class="sponsor__img" />
+            <img src="assets/sponsors3.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/sponsors4.png" alt="" class="sponsor__img" />
+            <img src="assets/sponsors4.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/sponsors5.png" alt="" class="sponsor__img" />
+            <img src="assets/sponsors5.png" alt="" class="sponsor__img" />
           </div>
         </div>
       </section>
